tests/tests/legacy_kustomizations/knative-eventing-install/test_data/expected/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_config.webhook.eventing.knative.dev.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: knative-eventing-install
<<<<<<< HEAD
    app.kubernetes.io/instance: knative-eventing-install
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: knative-eventing-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.11.0
    kustomize.component: knative
    serving.knative.dev/release: v0.11.0
=======
    app.kubernetes.io/name: knative-eventing-install
    eventing.knative.dev/release: v0.14.2
    kustomize.component: knative
>>>>>>> upstream/master
  name: config.webhook.eventing.knative.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: eventing-webhook
<<<<<<< HEAD
      namespace: knative-serving
=======
      namespace: knative-eventing
>>>>>>> upstream/master
  failurePolicy: Fail
  name: config.webhook.eventing.knative.dev
  namespaceSelector:
    matchExpressions:
    - key: eventing.knative.dev/release
      operator: Exists
<<<<<<< HEAD
=======
  sideEffects: None
>>>>>>> upstream/master
